# DeepResearch

./: .replit  ANALYSIS_REPORT.md  CLAUDE.md  pyproject.toml  replit.md  replit.nix  requirements.txt  webui.py
.github/workflows/: ci.yml
src/agent/: custom_agent.py  custom_message_manager.py
src/controller/: custom_controller.py
src/ui/: browser_state.py  handlers.py
src/utils/: deep_research.py  default_config_settings.py  exceptions.py  llm.py  logging_config.py  obsidian_export.py  retry.py  tokens.py  utils.py
tests/: test_config.py  test_deep_research.py  test_exceptions.py  test_logging_config.py  test_retry.py  test_tokens.py  test_unit.py
tmp/deep_research/406d05fe-f7c1-4e28-b099-24a4b62b6c43/: final_report.md
